--- a/app/views/blogs.html
+++ b/app/views/blogs.html
@@ -25,6 +25,8 @@
                 <hr>
                 <p>{{blog.description | limitTo : charactersLimit}}</p>
                 <a class="btn btn-primary" href="#/blogs/{{blog.blog_id}}" ng-click="blogId(blog)">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <hr class="HeaderHr">
+                <br>
                 </div>
                 <hr>
 
