--- a/app/views/directives/employee-header.html
+++ b/app/views/directives/employee-header.html
@@ -24,19 +24,16 @@
                         <a href="#/project">Projects</a>
                     </li>
                     <li>
-                        <a href="#/ask">FAQ</a>
+                        <a href="#/ask">Ask Questions</a>
                     </li>
                     <li>
                         <a href="#/blogs">Blogs</a>
-                    </li>
-                    <li>
-                        <a href="#/gallery">Gallery</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                   <li><a href="#/suggestions">Suggestions</a></li>
                   <li class="dropdown">
-                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{user_name}} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><a href="#">Action</a></li>
                       <li><a href="#">Another action</a></li>
