--- a/app/views/project.html
+++ b/app/views/project.html
@@ -1,9 +1,14 @@
 <employee-header></employee-header>
 <!-- Page Content -->
 <div class="container">
+  <div class="col-md-9">
+    <h1 class="page-header">
+          Projects
+          <small>at Mantralabs</small>
+      </h1>
     <div class="panel panel-default">
       <!-- Default panel contents -->
-      <div class="panel-heading">Projects at Mantralabs</div>
+      <div class="panel-heading"> </div>
 
       <!-- Table -->
       <table class="table table-striped table-hover">
@@ -18,7 +23,7 @@
         <tbody>
           <tr ng-repeat="project in projects | startFrommm:(currentPageee - 1)* pageSizeee:isEnableee | limitTo: pageSizeee">
             <td>{{project.name}}</td>
-            <td>{{project.desc}}</td>
+            <td>{{project.desc | limitTo : charactersLimit}}</td>
             <td><i class="fa fa-external-link IconHover" ng-click="projectId(project.id, project.name)"></i></td>
             <td><i class="fa fa-trash IconHover" ng-click="DeleteProj(project.id,$index)"></i></td>
           </tr>
@@ -50,7 +55,30 @@
           <pagination total-items="projects.length" ng-model="currentPageee" items-per-page="pageSizeee"></pagination>
         </div>
       </div>
-            
+    </div>
+    <div class="col-md-3">
+
+        <!-- Blog Search Well -->
+        <div class="well">
+            <h4>Blog Search</h4>
+            <div class="input-group">
+                <input type="text" class="form-control" ng-model="blogSearch">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" ng-click="search()">
+                        <span class="glyphicon glyphicon-search"></span>
+                </button>
+                </span>
+            </div>
+            <!-- /.input-group -->
+        </div>
+
+        <!-- Side Widget Well -->
+        <div class="well">
+            <h4>Side Widget Well</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
+        </div>
+
+    </div>
     <hr>
     <!-- /.row -->
     <employee-footer></employee-footer>
