change password Done

--- a/app/views/askDesc.html
+++ b/app/views/askDesc.html
@@ -58,7 +58,7 @@
 					<div class="well">
                         <div class="media" ng-repeat="comment in ans.comments">
                             <a class="pull-left" href="#">
-                                <img class="media-object" src="http://placehold.it/64x64" alt="">
+                                <img ng-src="{{comment.path}}" class="commentDimension img-responsive" alt="">
                             </a>
                             <div class="media-body">
                                 <h4 class="media-heading"><a href="#/employees/{{comment.id}}" ng-click="emplId(comment.id)">{{comment.user_name}}</a>
@@ -90,7 +90,7 @@
                 <!-- Posted Comments -->
 
                 <!-- Comment -->
-                <div class="media" ng-repeat="comment in comments">
+                <!-- <div class="media" ng-repeat="comment in comments">
                     <a class="pull-left" href="#">
                         <img class="media-object" src="http://placehold.it/64x64" alt="">
                     </a>
@@ -100,7 +100,7 @@
                         </h4>
                         {{comment.comment}}
                     </div>
-                </div>
+                </div> -->
                 
 
             </div>
