--- a/app/views/blogDesc.html
+++ b/app/views/blogDesc.html
@@ -25,7 +25,11 @@
                 <hr>
 
                 <!-- Preview Image -->
-                <img class="img-responsive" src="http://placehold.it/900x300" alt="">
+                <img class="img-responsive imgDimension" ng-src="{{path}}" alt="" ng-hide="image">
+                <img ng-show="image" ng-src="{{image.url}}" class="img-responsive imgDimension"/>
+                <input type="file" accept="image/*" image="image" ng-show="personalProfile"/>
+                <br>
+                <button ng-click="showImage(image)" class="btn btn-default" ng-show="personalProfile">Change Profile Picture</button>
 
                 <hr>
 
@@ -69,7 +73,7 @@
                 <!-- Comment -->
                 <div class="media" ng-repeat="comment in comments">
                     <a class="pull-left" href="#">
-                        <img class="media-object" src="http://placehold.it/64x64" alt="">
+                        <img class="commentDimension img-responsive" ng-src="{{comment.path}}" alt="">
                     </a>
                     <div class="media-body">
                         <h4 class="media-heading"><a href="#/employees/{{comment.id}}" ng-click="emplId(comment.id)">{{comment.user_name}}</a>
