--- a/app/views/employeess.html
+++ b/app/views/employeess.html
@@ -8,7 +8,7 @@
             <div class="box">
               <div class="row">
                     <div class="col-sm-6 col-md-4">
-                        <img src="images/project_pic01.jpg" alt="" class="img-rounded img-responsive" />
+                        <img ng-src="{{path}}" alt="" class="img-rounded img-responsive"/>
                     </div>
                     <div class="col-sm-6 col-md-8">
                         <h2>{{userInfo.name}}</h2>
