--- a/app/views/suggestionDesc.html
+++ b/app/views/suggestionDesc.html
@@ -67,17 +67,16 @@
                 <!-- Comment -->
                 <div class="media" ng-repeat="comment in comments">
                     <a class="pull-left" href="#">
-                        <img class="media-object" src="http://placehold.it/64x64" alt="">
+                        <img class="commentDimension img-responsive" src="{{comment.path}}" alt="">
                     </a>
                     <div class="media-body">
-                        <h4 class="media-heading"><a href="#/employees/{{comment.user_id}}" ng-click="emplId(comment.user_id)">{{comment.user_name}}</a>
+                        <h4 class="media-heading"><a href="#/employees/{{comment.id}}" ng-click="emplId(comment.id)">{{comment.user_name}}</a>
                             <small>{{comment.sug_created}}</small>
                         </h4>
                         {{comment.comment}}
                     </div>
                 </div>
 
-                
 
             </div>
 
