--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -554,6 +554,7 @@ a:hover{
 
 .slide-image {
     width: 100%;
+    height: 300px;
 }
 
 .carousel-holder {
@@ -680,4 +681,14 @@ body {
 .glyphicon.glyphicon-thumbs-down {
     font-size: 40px;
     color: #f05f40;
+}
+
+.imgDimension{
+  width: 900px;
+  height: 300px;
+}
+
+.commentDimension{
+  width: 60px;
+  height: 60px;
 }
