--- a/app/views/employee.html
+++ b/app/views/employee.html
@@ -8,20 +8,13 @@
             <div class="box">
               <div class="row">
                     <div class="col-sm-6 col-md-4">
-                        <img src="images/project_pic01.jpg" alt="" class="img-rounded img-responsive" />
+                        <img ng-src="{{path}}" type="{{image.file.type}}" alt="" class="img-rounded img-responsive" ng-hide="image" />
+                        <img ng-show="image" ng-src="{{image.url}}" type="{{image.file.type}}" class="img-rounded img-responsive"/>
+                        <input type="file" accept="image/*" image="image" ng-show="personalProfile"/>
+                        <br>
+                        <button ng-click="showImage(image)" class="btn btn-default" ng-show="personalProfile">Change Profile Picture</button>
                     </div>
-                    <!-- <div>
-                        <label for="inputImage">Image</label>
-                        
-                        <input id="inputImage" type="file" accept="image/*" image="image" />
-                        
-                        <img ng-show="image" ng-src="{{image.url}}" type="{{image.file.type}}"/> 
-                        <button type="submit" ng-click="single(image)" disabled>Add</button>
-                        <button type="reset">Clear</button>
-                    </div> -->
-                    <input type="file" accept="image/*" image="image"/>
-                    <img ng-show="image" ng-src="{{image.url}}" type="{{image.file.type}}" />
-                    <button ng-click="showImage(image)">Add</button>
+                    
                     <div class="col-sm-6 col-md-8">
                         <h2>{{userrr.name}}</h2>
                         <h4>Number: {{userrr.mobile}}</h4>
