--- a/app/views/language.html
+++ b/app/views/language.html
@@ -21,7 +21,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr ng-repeat="lang in languages | startFrommm:(currentPageee - 1)* pageSizeee:isEnableee | limitTo: pageSizeee">
+          <tr ng-repeat="lang in languages | filter : blogSearch | startFrommm:(currentPageee - 1)* pageSizeee:isEnableee | limitTo: pageSizeee">
             <td>{{lang.name}}</td>
             <td>{{lang.desc | limitTo : charactersLimit}}</td>
             <td><i class="fa fa-external-link IconHover" ng-click="langId(lang.id, lang.name, lang.desc, $index)"></i></td>
