--- a/app/views/login.html
+++ b/app/views/login.html
@@ -9,6 +9,7 @@
 	<form>
 		<input type="text" placeholder="username" name="user" ng-model="user.username" required><br>
 		<input type="password" placeholder="password" name="password" ng-model="user.password"><br>
+		<a href="#/forgotpassword">forgot password</a>
 		<input type="button" ng-click="login()" value="Login">
 		<input id="signUp" type="button" ng-click="signUp()" value="Sign Up">
 		<p ng-show="loginFailed">{{loginMessage}}</p>
