--- a/app/views/login.html
+++ b/app/views/login.html
@@ -8,7 +8,7 @@
 <div class="login">
 	<form>
 		<input type="text" placeholder="username" name="user" ng-model="user.username" required><br>
-		<input type="password" placeholder="password" name="password" ng-model="user.password"><br>
+		<input type="password" placeholder="password" name="password" ng-model="user.password" required><br>
 		<a href="#/forgotpassword">forgot password</a>
 		<input type="button" ng-click="login()" value="Login">
 		<input id="signUp" type="button" ng-click="signUp()" value="Sign Up">
