hopefully  ho jaye

--- a/app/views/employee.html
+++ b/app/views/employee.html
@@ -123,7 +123,7 @@
             <!-- Pagination -->
             <div class="containerrr">
               <div class="pagination">
-                <pagination total-items="languages.length" ng-model="currentPage" items-per-page="pageSize"></pagination>
+                <pagination total-items="userrr.languages.length" ng-model="currentPage" items-per-page="pageSize"></pagination>
               </div>
             </div>
             <hr class="HeaderHr">
@@ -169,7 +169,7 @@
             <!-- Pagination -->
             <div class="containerrr">
               <div class="pagination">
-                <pagination total-items="projects.length" ng-model="currentPageee" items-per-page="pageSizeee"></pagination>
+                <pagination total-items="userrr.projects.length" ng-model="currentPageee" items-per-page="pageSizeee"></pagination>
               </div>
             </div>
 
