--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,9 +4,10 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1>ConnectMantra <br> The One place that connects All</h1>
+                <br><br><br>
                 <hr class="HeaderHr">
-                <p class="headerPara">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p class="headerPara">Connect Mantra helps you to connect with the employees of Mantralabs. You can post your querries and also answer querries posted by others. You can post suggestions and complaint.</p>
                 <a ng-click="gotoBottom()" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
