--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -562,7 +562,12 @@ a:hover{
     border-radius: 4px;
 }
 
-
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    height: 290px;
+}
 
 
 /*employee table*/
